Fix vertical overflow on main container

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  margin: 15px;
+  margin: 15px 0;
   .center();
   color: #555;
 
